# NeuraFlow

./: CMakeLists.txt  README.md  build.sh  run_demo.sh
broker/: broker.cpp
client/: client_simulate.cpp
core/: neura_ipc.hpp  service_node.hpp
worker/: worker_llm.cpp
